ADDED: to ParseInfo methods isAtom(), isBranch(), and descend().