@@ -22,8 +22,8 @@ print(check_output(['/Library/Frameworks/Python.framework/Versions/3.4/bin/pytho
 os.chdir('../../sparqlparser')
 print('\nRunning grammar test\n')
 print(check_output(['/Library/Frameworks/Python.framework/Versions/3.4/bin/python3.4', 'grammar.py']).decode('utf-8'))
-print('\nSKIPPING func_test test\n')
-# print(check_output(['/Library/Frameworks/Python.framework/Versions/3.4/bin/python3.4', 'func_test.py']).decode('utf-8'))
+print('\nRunning func_test test\n')
+print(check_output(['/Library/Frameworks/Python.framework/Versions/3.4/bin/python3.4', 'func_test.py']).decode('utf-8'))
 print('\nRunning grammar_functest test\n')
 print(check_output(['/Library/Frameworks/Python.framework/Versions/3.4/bin/python3.4', 'grammar_functest.py']).decode('utf-8'))
 print('\nRunning grammar_unittest test\n')
